--- a/source/stylesheets/_component__nav.scss
+++ b/source/stylesheets/_component__nav.scss
@@ -12,11 +12,17 @@
     display: flex;
     padding: 0 $grid-unit-4;
 
+    // Crop the logo when small
     @media all and (max-width: $nav-breakpoint) {
       min-width: 60px;
       overflow: hidden;
       padding: 0 ($grid-unit * 2);
       width: 60px;
+
+      // For Firefox, to avoid squishing the logo
+      img {
+        min-width: 130px;
+      }
     }
   }
 
@@ -24,11 +30,7 @@
     display: flex;
     flex: 3;
     justify-content: flex-end;
-    margin: 0 $grid-unit-2;
-
-    @media all and (max-width: $nav-breakpoint) {
-      justify-content: center;
-    }
+    margin: 0;
 
     li {
       height: $grid-unit-8;
@@ -44,10 +46,6 @@
       text-decoration: none;
       transition: border .2s;
 
-      @media all and (max-width: $nav-breakpoint) {
-        padding: $grid-unit-2 $grid-unit;
-      }
-
       &:hover {
         box-shadow: inset 0 -3px 0 $check-blue;
         transition: border .2s;
@@ -59,6 +57,20 @@
     }
   }
 }
+
+// Page navigation: current page indicator
+@each $page in bridge, check, about {
+  .#{$page} {
+
+    .#{$page} {
+      a {
+        box-shadow: inset 0 -3px 0 $check-blue;
+        color: $check-blue;
+      }
+    }
+  }
+}
+
 
 // Locale Nav
 //
@@ -102,21 +114,5 @@
     border-radius: 4px;
     color: $white;
     font-weight: bold;
-  }
-}
-
-// Page navigation: current page indicator
-//
-// Loop through the main pages.
-// When the outer (body class) matches the inner (nav class), it's active.
-@each $page in bridge, check, about {
-  .#{$page} {
-
-    .#{$page} {
-      a {
-        box-shadow: inset 0 -3px 0 $check-blue;
-        color: $check-blue;
-      }
-    }
   }
 }
